issues/IF-343: wysiwyg content align to vertically center.

--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_image-wysiwyg.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_image-wysiwyg.scss
@@ -19,11 +19,10 @@
             .wysiwyg-module {
                 display: flex;
                 flex-direction: column;
-                padding: 40px 0;
+                justify-content: center;
 
                 @include breakpoint(lg down) {
                     padding: 0;
-                    text-align: center;
                 }
             }
 
